--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "nativetempalte",
-  "displayName": "nativetempalte"
+  "name": "YOUR_APP_NAME_HERE",
+  "displayName": "YOUR_APP_NAME_HERE"
 }
