--- a/ios/YOUR_APP_NAME_HERE/Info.plist
+++ b/ios/YOUR_APP_NAME_HERE/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>nativetempalte</string>
+	<string>YOUR_APP_NAME_HERE</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
