--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-project-template",
+  "name": "YOUR_APP_NAME_HERE",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "e2e": "detox test --configuration",
+    "e2e:build": "detox build --configuration",
+    "e2e:android:attached": "npm run e2e:build android.att.release && npm run e2e android.att.release",
+    "e2e:android:emulated": "npm run e2e:build android.emu.release && npm run e2e android.att.emulated",
+    "e2e:ios": "npm run e2e:build ios.sim.release && npm run e2e ios.sim.release"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -19,7 +23,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
