--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "test:unit": "jest --config=./test/unit.config.js",
+    "test:component": "jest --config=./test/component.config.js",
     "e2e": "detox test --configuration",
     "e2e:build": "detox build --configuration",
     "e2e:android:attached": "npm run e2e:build android.att.release && npm run e2e android.att.release",
     "e2e:android:emulated": "npm run e2e:build android.emu.release && npm run e2e android.att.emulated",
-    "e2e:ios": "npm run e2e:build ios.sim.release && npm run e2e ios.sim.release"
+    "e2e:ios": "npm run e2e:build ios.sim.release && npm run e2e ios.sim.release",
+    "test": "npm run test:unit && npm run test:component && npm run test:android:attached"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -22,6 +25,8 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.5.1",
     "@types/react": "^18.0.24",
